
import "BoosterPackStuff.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventBoosterPackProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


//requesting all booster packs and related booster items
message RetrieveBoosterPackRequestProto {
     optional MinimumUserProto sender = 1;
}

message RetrieveBoosterPackResponseProto {
	optional MinimumUserProto sender = 1;
	repeated BoosterPackProto packs = 2;
	optional RetrieveBoosterPackStatus status = 3;
	
	enum RetrieveBoosterPackStatus {
     	SUCCESS = 1;
     	SOME_FAIL = 2;
     }
}

//------------------------------------------------------------------------------------------

message PurchaseBoosterPackRequestProto {
	optional MinimumUserProto sender = 1;
	optional int32 boosterPackId = 2;
	optional int64 clientTime = 3; 
}

message PurchaseBoosterPackResponseProto {
	optional MinimumUserProto sender = 1;
	optional PurchaseBoosterPackStatus status = 2;
	
	enum PurchaseBoosterPackStatus {
		SUCCESS = 1;
		NOT_ENOUGH_GOLD = 2;
		NOT_ENOUGH_SILVER = 3;
		OTHER_FAIL = 4;
		CLIENT_TOO_APART_FROM_SERVER_TIME = 5;
	}
}

//------------------------------------------------------------------------------------------

message ReceivedRareBoosterPurchaseResponseProto {
	optional RareBoosterPurchaseProto rareBoosterPurchase = 1;
}

//------------------------------------------------------------------------------------------

